--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,52 @@
 .App {
   text-align: center;
 }
+.container{
+  position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 200px;
+    margin-top: -100px; /* half of you height */
+    width: 400px;
+    margin-left: -200px 
+}
+.quantity{
+  width: 500px;
+  height: 300px;
+}
+
+.quantity_minus{
+  border-radius: 3px 0 0 3px;
+  cursor: pointer;
+}
+.quantity_plus{
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+}
+
+.quantity_input{
+  width: 42px;
+  height: 29px;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  border-top: 2px solid #dee0ee;
+  border-bottom: 2px solid #dee0ee;
+  border-left: 1px solid #dee0ee;
+  border-right: 2px solid #dee0ee;
+  background: #fff;
+  color: #8184a1;
+}
+
+.quantity_minus:link,
+.quantity_plus:link{
+  color: #8184a1;
+}
+
+.quantity_minus:visited,
+.quantity_plus:visited{
+  color: #fff;
+}
 
 .App-logo {
   height: 40vmin;
